--- a/src/components/Section/Contact.css
+++ b/src/components/Section/Contact.css
@@ -76,37 +76,17 @@
   .header, .footer, .about-container, .projects-container, .contact-container {
     padding: 1rem; /* Reduz o padding para ajustar melhor em telas menores */
   }
-  @media (max-width: 480px) {
-    .header {
-        flex-direction: column;
-        align-items: center; /* Centraliza os itens no header */
-        padding: 0.8rem 1rem; /* Ajuste no espaçamento */
-        text-align: center; /* Centraliza o texto */
-    }
-
-    .logo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%; /* Garante que a logo ocupe a largura disponível */
-    }
-
-    .logo img {
-        height: 100px; /* Ajuste no tamanho da logo */
-    }
-
-    .navbar {
-        display: flex;
-        flex-direction: column; /* Coloca os links um abaixo do outro */
-        align-items: center; /* Centraliza os links */
-        gap: 0.8rem; /* Espaçamento entre os links */
-    }
-
-    .navbar a {
-        font-size: 16px; /* Ajuste no tamanho da fonte */
-    }
-}
-
+  .header{
+    display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+  transition: padding 0.3s ease-in-out;
+  }
+  .about-container{
+    background-color:  #464545;
+  }
+ 
   .navbar {
     flex-direction: column; /* Links em coluna em telas menores */
     gap: 1rem; /* Aumenta o espaçamento entre os links */
@@ -255,6 +235,36 @@
   .contact-form input, .contact-form textarea {
     font-size: 12px;
     padding: 8px;
+  }
+}
+@media (max-width: 480px) {
+  .header {
+      flex-direction: column;
+      align-items: center; /* Centraliza os itens no header */
+      padding: 0.8rem 1rem; /* Ajuste no espaçamento */
+      text-align: center; /* Centraliza o texto */
+  }
+
+  .logo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%; /* Garante que a logo ocupe a largura disponível */
+  }
+
+  .logo img {
+      height: 100px; /* Ajuste no tamanho da logo */
+  }
+
+  .navbar {
+      display: flex;
+      flex-direction: column; /* Coloca os links um abaixo do outro */
+      align-items: center; /* Centraliza os links */
+      gap: 0.8rem; /* Espaçamento entre os links */
+  }
+
+  .navbar a {
+      font-size: 16px; /* Ajuste no tamanho da fonte */
   }
 }
 
