--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,7 +5,7 @@
   }
 
 .video-container {
-    width: 100%; /* O contêiner ocupa 100% da largura da tela */
+    width: 100vw; /* O contêiner ocupa 100% da largura da tela */
     height: 100vh; /* O contêiner ocupa 100% da altura da tela */
     display: flex;
     justify-content: center;
@@ -13,6 +13,11 @@
     background-color: #000; /* Fundo preto para destacar o vídeo */
     overflow: hidden; /* Garante que nada saia do contêiner */
   }
+  .video-container video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Mantém a proporção e cobre toda a tela */
+}
   
   .welcome-video {
     width: 100vw; /* O vídeo ocupa 100% da largura da tela */
